# bt

./: .bandit-report.json  .gitignore  .pre-commit-config.yaml  .solid-refactoring-complete  Dockerfile  MIGRATION_COMPLETE.md  Makefile  README.md  SOLID_SUMMARY.md  docker-compose.override.yml  docker-compose.yml  grid_search.py  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
deploy/: README.md  install.sh  vbo-bot.service
docs/: CHANGELOG_SOLID.md  MIGRATION_GUIDE.md  REFACTORING_COMPLETE.md  SETUP_CHECK_FUNCTION.md  SOLID_PRINCIPLES_APPLIED.md  SOLID_REFACTORING.md  api_reference.rst  conf.py  index.rst  requirements.txt  tutorial.rst
examples/: backtest_vbo_comparison.py  backtest_vbo_portfolio.py  compare_implementations.py  fetch_data.py  generate_report.py  run_backtest.py  run_cpcv_validation.py  run_vbo_backtest.py  run_wfa_validation.py  solid_migration_example.py
notebooks/: experiment_strategy.ipynb
output/: RESULTS.md
scripts/: .env.example  backtest_vbo_portfolio.py  check.ps1  check.sh  code_quality.py  dev.sh  security_check.py
src/bt/: __init__.py  config.py  logging.py
src/bt/api/: __init__.py  jobs.py  models.py  server.py
src/bt/config/: __init__.py  config.py  module_config.py  settings.py
src/bt/core/: __init__.py  base.py  bootstrap.py  container.py  orchestrator.py  registry.py  simple_implementations.py  simple_strategies.py
src/bt/data/: __init__.py  fetcher.py
src/bt/data/storage/: __init__.py  backends.py  cache.py  manager.py
src/bt/domain/: __init__.py  models.py  models_optimized.py  orders.py  types.py
src/bt/engine/: __init__.py  backtest.py  data_provider.py  equity_tracker.py  order_executor.py  portfolio.py  portfolio_refactored.py  trade_recorder.py
src/bt/exceptions/: __init__.py  base.py  codes.py  decorators.py  exceptions.py  handler.py
src/bt/framework/: __init__.py  data_loader.py  facade.py  framework.py  report_generator.py  runner.py  shortcuts.py  strategy_manager.py
src/bt/interfaces/: __init__.py  core.py  portfolio_protocols.py  protocols.py  strategy_protocols.py  strategy_types.py
src/bt/monitoring/: __init__.py  alerts.py  decorators.py  exporters.py  logger.py  metrics.py  monitor.py
src/bt/plugins/: __init__.py  interfaces.py  manager.py  metadata.py  registry.py  templates.py
src/bt/plugins/examples/: __init__.py  mean_reversion_plugin.py
src/bt/profiling/: __init__.py  analyzer.py  profiler.py  stats.py
src/bt/reporting/: __init__.py  metrics.py  metrics_optimized.py  visualization.py
src/bt/reporting/charts/: __init__.py  base.py  equity_curves.py  performance.py
src/bt/security/: __init__.py  config.py  config_manager.py  manager.py  scanner.py  validator.py
src/bt/strategies/: __init__.py  allocation.py  allocation_optimized.py  allocation_simplified.py  conditions.py  indicators.py  pricing.py  vbo.py  vbo_allocation.py  vbo_allocation_match.py  vbo_conditions.py  vbo_pricing.py
src/bt/strategies/components/: __init__.py  allocations.py  conditions.py  factory.py  indicators.py  pricing.py  regime.py
src/bt/strategies/implementations/: __init__.py  factory.py  strategies.py
src/bt/utils/: calculations.py  chart_style.py  constants.py  datetime_helper.py  decimal_cache.py  indicator_cache.py  logging.py  utils.py  validation.py
src/bt/validation/: __init__.py  cpcv.py  wfa.py
tests/: __init__.py  conftest.py  test_allocation.py  test_allocation_skip.py  test_backtest.py  test_bt_final_match.py  test_conditions.py  test_cpcv.py  test_data_provider.py  test_exact_replica.py  test_fetcher.py  test_final_aggressive.py  test_final_check.py  test_final_clean.py  test_indicators.py  test_logging.py  test_metrics.py  test_models.py  test_modular.py  test_modular_final.py  test_portfolio.py  test_pricing.py  test_vbo_fixed.py  test_wfa.py
tests/fixtures/: data_generators.py
tests/integration/: test_full_backtest.py  test_strategies.py
tests/performance/: test_benchmarks.py
