[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bt"
version = "0.1.0"
description = "Event-driven cryptocurrency backtesting framework"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [
    {name = "BT Team"}
]
keywords = ["backtesting", "cryptocurrency", "trading", "strategy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.10",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "pandas>=2.0.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pandas-stubs>=2.3.3",
    "matplotlib-stubs>=0.3.11",
    "pyupbit>=0.2.0",
    "plotly>=5.0.0",
    "psutil>=5.0.0",
]

[project.optional-dependencies]
ml = [
    "joblib>=1.3.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pandas-stubs>=2.3.3",
    "matplotlib-stubs>=0.3.11",
    "types-PyYAML>=6.0.1",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-benchmark>=5.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
]
benchmark = [
    "pytest-benchmark>=5.0.0",
]

[project.scripts]
bt = "bt.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bt"]

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4
exclude = ["notebooks/", "*.ipynb", ".venv/", "venv/"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B019",   # lru_cache on methods (acceptable for performance)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports
"tests/**/*.py" = ["ARG"]  # Allow unused arguments in tests
"src/bt/strategies/*.py" = ["ARG001"]  # Allow unused arguments in strategy functions

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
plugins = []
check_untyped_defs = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "pyupbit.*",
    "pyarrow.*",
    "pandas.*",
    "joblib.*",
    "sklearn.*",
    "psutil.*",
    "uvicorn.*",
    "fastapi.*",
    "plotly.*",
]
ignore_missing_imports = true

# Modules with full type checking enabled:
# bt.utils, bt.domain, bt.interfaces, bt.validation, bt.exceptions, bt.config

# Modules still needing type fixes (to be addressed incrementally)
[[tool.mypy.overrides]]
module = [
    "bt.plugins.*",
    "bt.profiling.*",
    "bt.monitoring.*",
    "bt.api.*",
    "bt.data.storage.*",
    "bt.security.*",
    "bt.framework.*",
    "bt.reporting.*",
    "bt.engine.*",
    "bt.strategies.*",
    "bt.core.*",
    "bt.data.*",
]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/bt",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src/bt"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# Plugin entry points
[project.entry-points."bt.plugins"]
mean_reversion = "bt.plugins.examples.mean_reversion_plugin:MeanReversionStrategyPlugin"

[project.entry-points."bt.strategies"]
volatility_breakout = "bt.strategies.implementations:VolatilityBreakoutStrategy"
momentum = "bt.strategies.implementations:MomentumStrategy"
buy_and_hold = "bt.strategies.implementations:BuyAndHoldStrategy"

[project.entry-points."bt.data_providers"]
in_memory = "bt.engine.data_provider:InMemoryDataProvider"

[project.entry-points."bt.reporters"]
html = "bt.reporting.charts.equity_curves:EquityCurveChart"
